--- a/music_style.css
+++ b/music_style.css
@@ -282,6 +282,10 @@ main p {
     height: auto;
 }
 
+audio {
+    z-index: -1;
+}
+
 @media only screen and (max-width: 768px) {
     main p {
         width: 85%;
